--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ input::-webkit-inner-spin-button {
 input[type=number] {
     -moz-appearance: textfield;
 }
+/*-------------------------------------------------------*/
 
 p{
     font-size: 16px;
